--- a/GoalDetails.xaml
+++ b/GoalDetails.xaml
@@ -27,7 +27,9 @@
 
             <Label
                 x:Name="API"
-                HorizontalOptions="Center" />
+                HorizontalOptions="Center"
+                HorizontalTextAlignment="Center"
+                FontAttributes="Italic"/>
             <Label 
                 Text="Цел"
                 VerticalOptions="Center" 
